MIR-1198 Support validation of PDF/A documents
fixed changes from last commit