@@ -23,7 +23,7 @@
 package org.mycore.mir.wizard.command;
 
 import java.io.File;
-import java.net.URI;
+import java.net.URL;
 
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.FilenameUtils;
@@ -53,7 +53,7 @@ public class MIRWizardDownloadDBLib extends MIRWizardCommand {
             Element library = getInputXML().getChild("database").getChild("library");
 
             if (library != null && library.getChildren().size() > 0) {
-                String libDir = MCRConfigurationDir.getConfigurationDirectory().getAbsolutePath() + File.separator 
+                String libDir = MCRConfigurationDir.getConfigurationDirectory().getAbsolutePath() + File.separator
                     + "lib";
 
                 boolean success = true;
@@ -62,13 +62,12 @@ public class MIRWizardDownloadDBLib extends MIRWizardCommand {
                     String fname = FilenameUtils.getName(url);
                     File file = new File(libDir + File.separator + fname);
                     try {
-
-                        FileUtils.copyURLToFile(new URI(url).toURL(), file);
+                        FileUtils.copyURLToFile(new URL(url), file);
                         MCRConfigurationDirSetup.loadExternalLibs();
 
                         success = true;
                     } catch (Exception ex) {
-                        LOGGER.error("Exception while downloading or loading database library: " 
+                        LOGGER.error("Exception while downloading or loading database library: "
                                 + file.getAbsolutePath(), ex);
                         success = false;
                     }
